--- a/src/App.scss
+++ b/src/App.scss
@@ -106,6 +106,19 @@ h1, h2, h3, h4, h5,
   position: relative;
 }
 
+/*----------Active links---------------*/
+.active {
+	color: $black;
+	&:after {
+		visibility: visible;
+		-webkit-transform: scaleX(1);
+		-moz-transform: scaleX(1);
+		-ms-transform: scaleX(1);
+		-o-transform: scaleX(1);
+		transform: scaleX(1);
+	}
+}
+
 
 #colorlib-aside {
 	padding-top: 3em;
@@ -199,23 +212,9 @@ h1, h2, h3, h4, h5,
 						}
 					}
 				}
-				&.colorlib-active {
-					a {
-						color: $black;
-						&:after {
-							visibility: visible;
-							-webkit-transform: scaleX(1);
-							-moz-transform: scaleX(1);
-							-ms-transform: scaleX(1);
-							-o-transform: scaleX(1);
-							transform: scaleX(1);
-						}
-					}
-				}
 			}
 		}
 	}
-
 
 	#hire-button {
 		padding-top: 50px;
