--- a/src/App.scss
+++ b/src/App.scss
@@ -1,22 +1,7 @@
 
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/variables';
-
-$font-secondary: 'Poppins',Arial, sans-serif;
-$cursive-font: 'Bad Script', cursive;
-$font-primary: 'Montserrat', sans-serif;
-
-$white: #fff;
-$black: #000000;
-// $darken: #3a4348;
-$background:  #001a33;
-
-$primary: #f05d23;
-$primary-light: #fdf8f6;
-$secondary: #5dd28e;
-$grayish: #999999;
-$whitish: #d9d9d9;
-
+@import './scss/variables.scss';
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -430,13 +415,6 @@ h1, h2, h3, h4, h5,
 			color: lighten($black,75%);
 			font-weight: 300;
 		}
-		h1{
-			color: white;
-			letter-spacing: 1px;
-			font-weight: 900;
-			padding-top: 50px;
-			text-transform: uppercase;
-		}
 		.btn-custom{
 			font-weight: 400;
 			color: lighten($black,70%);
@@ -445,6 +423,14 @@ h1, h2, h3, h4, h5,
 	}
 }
 
+//Headings
+.heading-title {
+	color: white;
+	letter-spacing: 1px;
+	font-weight: 900;
+	padding-top: 50px;
+	text-align: center;
+}
 
 //PHOTOGRAPHY
 .photography-entry{
@@ -1151,7 +1137,7 @@ textarea.form-control {
   }
 
 .ftco-section {
-	padding: 6em 1.8em;
+	padding: 0.8em 1.8em;
 	position: relative;
 }
 
