--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,3 @@
-
-@import '~bootstrap/scss/bootstrap';
-@import '~bootstrap/scss/variables';
 @import './scss/variables.scss';
 
 @mixin border-radius($radius) {
@@ -428,7 +425,7 @@ h1, h2, h3, h4, h5,
 	color: white;
 	letter-spacing: 1px;
 	font-weight: 900;
-	padding-top: 50px;
+	padding: 40px 0;
 	text-align: center;
 }
 
