--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,7 @@
+
+@import '~bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/variables';
+
 $font-secondary: 'Poppins',Arial, sans-serif;
 $cursive-font: 'Bad Script', cursive;
 $font-primary: 'Montserrat', sans-serif;
