--- a/src/App.scss
+++ b/src/App.scss
@@ -134,13 +134,10 @@ h1, h2, h3, h4, h5,
 		@include media-breakpoint-down(md){
 			margin-bottom: 20px;
 		}
-		a{
-			display: inline-block;
-			text-align: center;
-			color: $black;
-			span{
-				color: lighten($black,80%);
-			}
+		
+		img {
+			height: 100px;
+			width: 100px;
 		}
 	}
 	#colorlib-main-menu {
@@ -427,6 +424,10 @@ h1, h2, h3, h4, h5,
 	font-weight: 900;
 	padding: 40px 0;
 	text-align: center;
+
+	@include media-breakpoint-down(sm){
+	padding-top: 100px;
+	}
 }
 
 //PHOTOGRAPHY
@@ -808,6 +809,10 @@ h1, h2, h3, h4, h5,
 		height: 100vh;
 		width: 100%;
 		overflow-y: scroll;
+
+		@include media-breakpoint-down(sm){
+			padding-top: 100px;
+		}
 }
 
 .about-author{
@@ -1136,6 +1141,10 @@ textarea.form-control {
 .ftco-section {
 	padding: 0.8em 1.8em;
 	position: relative;
+
+	@include media-breakpoint-down(md){
+		padding-top: 1.5em;
+	}
 }
 
 .ftco-footer {
