--- a/src/scss/loading.scss
+++ b/src/scss/loading.scss
@@ -1,7 +1,7 @@
 @import 'variables.scss';
 
 .loading-section {
-  background-color: $primary-light;
+  background-color: $background;
   height: 100vh;
 
   @include media-breakpoint-down(sm) {
@@ -11,12 +11,12 @@
 
 .loader:empty {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 45%;
   width: 6em;
   height: 6em;
-  border: 1.1em solid $secondary;
-  border-left: 1.1em solid $light-bg;
+  border: 0.8em solid $primary;
+  border-left: 0.8em solid $whitish;
   border-radius: 50%;
   animation: load8 1.1s infinite linear;
 
