--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -69,7 +69,7 @@
 				font-size: 16px;
 				font-weight: 700;
 				a {
-					color: rgba(0,0,0,.4);
+					color: rgba(0,0,0,.9);
 					text-decoration: none;
 					position: relative;
 					padding: 10px 0;
@@ -107,6 +107,9 @@
 							-o-transform: scaleX(1);
 							transform: scaleX(1);
 						}
+					}
+					&:active {
+						color: $primary;
 					}
 				}
 			}
