--- a/src/scss/Skill.scss
+++ b/src/scss/Skill.scss
@@ -11,34 +11,43 @@
       text-align: center;
       color: $white;
       border-bottom: 1px solid $background;
+      padding-bottom: 10px;
+
+      @include media-breakpoint-down(md){
+        font-size: 1.4rem;
+      }
     }
 
   .skill-list {
     font-family: $font-primary;
     display: grid;
     grid-gap: 20px;
-    // grid-auto-flow: column;
     grid-template-columns: repeat(5, 1fr);
     justify-content: center;
     padding-top: 10px;
 
-    // @include media-breakpoint-down(sm){
-    //   grid-template-columns: repeat(2, 1fr);
-    // }
-
     @include media-breakpoint-down(md){
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(4, 1fr);
+      grid-gap: 10px;
+    }
+
+    @include media-breakpoint-down(sm){
+      grid-template-columns: repeat(3, 1fr);
     }
 
     .skill {
       padding: 10px;
 
       img {
-        height: 100px;
+        height: 80px;
         align-self: center;
 
         @include media-breakpoint-down(sm){
-          height: 60px;
+          height: 40px;
+        }
+
+        @include media-breakpoint-down(md){
+          height: 50px;
         }
       }
 
@@ -46,6 +55,10 @@
         color: $whitish;
         text-align: center;
         padding-top: 4px;
+
+        @include media-breakpoint-down(sm){
+          font-size: 0.6rem;
+        }
       }
     }
   }
