--- a/src/scss/Project.scss
+++ b/src/scss/Project.scss
@@ -11,6 +11,7 @@
   img {
     height: inherit;
     width: 100%;
+    height: 90%;
 
     @include media-breakpoint-down(sm) {
       height: 85%;
@@ -19,8 +20,9 @@
   }
 
   .img {
-    display: block;
-    height: 330px;
+    display: flex;
+    align-items: center;
+    height: 300px;
     position: relative;
 
     @include border-radius(3px);
@@ -75,19 +77,20 @@
     z-index: 0;
 
     .category {
-      text-transform: uppercase;
-      font-size: 12px;
+      text-transform: capitalize;
+      font-size: 14px;
       letter-spacing: 1px;
       margin-bottom: 0.6rem;
+      font-family: $font-primary;
 
       span {
         display: inline-block;
         text-align: center;
         padding: 6px 10px;
         margin: 3px 2px;
-        border-radius: 20px;
-        background-color: #06376685;
-        color: $primary;
+        border-radius: 6px;
+        background-color: #112a4d;
+        color: #777;
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 
         @include media-breakpoint-down(sm) {
