--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -72,8 +72,9 @@
       padding: 0;
 
       li {
-        margin: 0 0 15px 0;
+        margin: 0 auto 15px auto;
         padding: 0;
+        width: 100px;
         list-style: none;
         font-size: 16px;
         font-weight: 700;
@@ -87,39 +88,11 @@
 
           @include transition(0.3s);
 
-          &::after {
-            content: "";
-            position: absolute;
-            height: 1px;
-            bottom: 7px;
-            left: 0;
-            right: 0;
-            background-color: $black;
-            visibility: hidden;
-            -webkit-transform: scaleX(0);
-            -moz-transform: scaleX(0);
-            -ms-transform: scaleX(0);
-            -o-transform: scaleX(0);
-            transform: scaleX(0);
-            -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            -moz-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            -ms-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            -o-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-          }
-
           &:hover {
             text-decoration: none;
-            color: rgba(0, 0, 0, 1);
-
-            &::after {
-              visibility: visible;
-              -webkit-transform: scaleX(1);
-              -moz-transform: scaleX(1);
-              -ms-transform: scaleX(1);
-              -o-transform: scaleX(1);
-              transform: scaleX(1);
-            }
+            color: $primary;
+            font-weight: 900;
+            transition: border-bottom .1s ease-in-out;
           }
 
           &:active {
@@ -148,44 +121,9 @@
     padding-top: 50px;
     font-family: $font-primary;
   }
+}
 
-  .colorlib-footer {
-    position: absolute;
-    bottom: 40px;
-    right: 1.5em;
-    left: 1.5em;
-    font-size: 14px;
-    font-weight: 400;
-    color: rgba(0, 0, 0, 0.6);
-    padding: 0 20px;
-
-    span {
-      display: block;
-    }
-
-    ul {
-      padding: 0;
-      margin: 0;
-
-      li {
-        padding: 0;
-        margin: 0;
-        display: inline;
-        list-style: none;
-
-        a {
-          color: rgba(0, 0, 0, 0.7);
-          padding: 4px;
-
-          &:hover,
-          &:active,
-          &:focus {
-            text-decoration: none;
-            outline: none;
-            color: $primary;
-          }
-        }
-      }
-    }
-  }
+.nav-link--active {
+  border-bottom: 3px solid $primary;
+  transition: border-bottom .5s ease-in-out;
 }
