--- a/src/scss/NavBar.scss
+++ b/src/scss/NavBar.scss
@@ -99,6 +99,12 @@
             color: $primary;
           }
         }
+
+        &:hover {
+          a {
+            color: $primary;
+          }
+        }
       }
     }
   }
