--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,6 +11,7 @@ $black: #000;
 $darken: #3a4348;
 $background:  #001a33;
 $background-2: #022d55;
+$header-bg: #132238;
 
 $primary: #f05d23;
 $primary-light: #fdf8f6;
