Adde google analytics events

--- a/src/App.scss
+++ b/src/App.scss
@@ -207,6 +207,9 @@ h5,
   60% { border-color: $primary; }
 }
 
+.ftco-section {
+  position: relative;
+}
 .ftco-section .container {
   padding: 0.8em 2em;
 
