--- a/src/scss/Blog.scss
+++ b/src/scss/Blog.scss
@@ -24,10 +24,12 @@
 
     @include media-breakpoint-down(md) {
       border-radius: 10px 10px 0 0;
+      width: 100%;
     }
 
     @include media-breakpoint-down(sm) {
       height: 200px;
+      width: 100%;
     }
   }
 
