--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -12,10 +12,16 @@
 }
 
 .about-author {
+  height: 750px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   h1 {
     color: white;
     font-weight: 900;
     padding-bottom: 1.2rem;
+    justify-content: space-between;
 
     @include media-breakpoint-down(sm) {
       font-size: 1.5rem;
@@ -25,9 +31,14 @@
   h4 {
     color: white;
     font-family: $font-primary;
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
-    padding-bottom: 3rem;
+    padding-bottom: 1rem;
+
+    span {
+      font-size: 1.5rem;
+      padding-left: 5px;
+    }
 
     @include media-breakpoint-down(sm) {
       font-size: 1rem;
@@ -37,7 +48,6 @@
 
   .title {
     color: $primary;
-    text-transform: uppercase;
     font-family: $font-secondary;
     font-size: 1.5rem;
     width: 60%;
@@ -54,15 +64,15 @@
 
   .info {
     font-family: $font-primary;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
     font-weight: 100;
     padding-top: 30px;
     width: 60%;
     margin: 0 auto;
-    color: white;
+    color: $whitish;
 
     @include media-breakpoint-down(sm) {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       width: 95%;
     }
   }
@@ -103,4 +113,8 @@
       }
     }
   }
+
+  @include media-breakpoint-down(sm) {
+    height: 500px;
+  }  
 }
