--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,22 +2,34 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~bootstrap/scss/variables';
 
-$font-secondary: 'Poppins',arial, sans-serif;
+@font-face {
+  font-family: 'hkgrotesk-medium';
+  src: url("../fonts/hkgrotesk-medium.otf") format("opentype");
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'hkgrotesk-bold';
+  src: url("../fonts/hkgrotesk-bold.otf") format("opentype");
+  font-style: normal;
+}
+
+$font-secondary: "hkgrotesk-bold", sans-serif;
 $cursive-font: 'Bad Script', cursive;
-$font-primary: 'Montserrat', sans-serif;
+$font-primary: "hkgrotesk-medium", sans-serif;
 
 $white: #fff;
 $black: #000;
 $darken: #3a4348;
-$background:  #001a33;
-$background-2: #001a3367;
+$background:  #132238; //old - 001a33;
+$background-2: #001a3367; // old - 001a3367;
 $header-bg: #132238;
 
 $primary: #ff4800;
 $primary-light: #fdf8f6;
 $secondary: #5dd28e;
 $grayish: #999;
-$whitish: #d9d9d9;
+$whitish: #eee;
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
