:wrench: Fix blogs and projects

--- a/src/scss/Blog.scss
+++ b/src/scss/Blog.scss
@@ -68,3 +68,9 @@
   border-radius: 50%;
   padding: 5px 16px;
 }
+
+.blog-divider {
+  width: 100%;
+  border-bottom: 1px solid #555;
+  margin-bottom: 50px;
+}
