--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -29,7 +29,7 @@ $primary: #ff4800;
 $primary-light: #fdf8f6;
 $secondary: #5dd28e;
 $grayish: #999;
-$whitish: #eee;
+$whitish: #ddd;
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
