--- a/src/scss/Project.scss
+++ b/src/scss/Project.scss
@@ -20,6 +20,11 @@
 }
 
 .blog-entry {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   ul {
     list-style-type: none;
     padding: 0 0;
@@ -71,17 +76,23 @@
     flex-direction: row;
     height: 300px;
     justify-content: center;
-    width: 100%;
+    width: 90%;
     position: relative;
 
-    img {
-      width: 90%;
-      height: 90%;
-
-      @include media-breakpoint-down(sm) {
-        height: 85%;
-        margin: 20px 0;
-      }
+    .project-pic {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      img {
+        width: 90%;
+        height: 90%;
+  
+        @include media-breakpoint-down(sm) {
+          height: 85%;
+          margin: 20px 0;
+        }
+    }
     }
 
     @include border-radius(3px);
@@ -121,7 +132,7 @@
         margin: 3px 2px;
         border-radius: 6px;
         background-color: #112a4d;
-        color: #777;
+        color: #aaa;
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 
         @include media-breakpoint-down(sm) {
@@ -131,7 +142,7 @@
     }
 
     .project-desc {
-      color: #999;
+      color: $whitish;
       font-size: 16px;
       font-family: $font-primary;
     }
