--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -2,7 +2,7 @@
 @import './variables.scss';
 
 .about-section {
-  padding: 60px 40px;
+  padding: 120px 40px 60px 40px;
   height: 100vh;
   width: 100%;
 
@@ -12,7 +12,7 @@
 }
 
 .about-author {
-  height: 750px;
+  height: 700px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -66,7 +66,7 @@
     font-family: $font-primary;
     font-size: 1.3rem;
     font-weight: 100;
-    padding-top: 30px;
+    padding-top: 60px;
     width: 60%;
     margin: 0 auto;
     color: $whitish;
