--- a/src/scss/Project.scss
+++ b/src/scss/Project.scss
@@ -34,12 +34,37 @@
     font-weight: 700;
     font-size: 28px;
 
-    a {
+    a,
+    p {
       color: white;
     }
 
     &:hover {
       text-decoration: underline;
+    }
+  }
+
+  .project-private-section {
+    display: inline-block;
+    color: white;
+
+    div {
+      color: white;
+      display: inline-flex;
+      flex-direction: row;
+      justify-content: center;
+      border-radius: 6px;
+      align-items: center;
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      background-color: #284369;
+
+      p {
+        margin: 0;
+        padding-left: 8px;
+      }
     }
   }
 
